--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -23,7 +23,7 @@
     <div>
       <button type="submit" class="btn">SIGNUP</button>
     </div>
-    <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
+    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
   </form>
 </main>
 <%- include('../includes/end.ejs') %>
